midtermstyles.css
h1#site-title{
    text-align:center;
    font-size: 72px;
    color:black;
    margin-top:40px;
    margin-bottom:40px;
} 
.container-main{
    width:96%;
    max-width: 1020px;
    margin: 0 auto;
}
.container{
    max-width: 800px;
}
body{
    font-family:'Times New Roman', Times, serif;
    background-color: rgb(202, 238, 179);
    text-align:justify;
    color:black;
}
header nav ul {
    background: #8ce892;
    text-align: center;
    margin: 0 auto;
    list-style: none;
    padding: 10px;
    border: 1px solid black;
    text-decoration: none;
  }
  nav ul li { 
    padding: 24px;
    display: inline;
    overflow: hidden;
  }
  header nav ul li a{
    color: black;
    text-decoration: none;
    display:inline;
  }
  nav ul li a:hover {
    text-decoration: underline;
  }
footer p{
    text-align: center;
    padding: 12px 0;
  }
  footer nav ul li{
    background: #8ce892;
    text-align: center;
    margin: 0 auto;
    padding: 12px 0;
    list-style: none;
    text-decoration: none;
    border: 1px solid black;
    color:black;
  }
  footer#page-footer{
    text-align: center;
    padding: 12px 0;
    margin-top: 48px;
    color: black;
    text-decoration: none;
    background: #8ce892;
    border: 2px solid black;
  }

